# vofod

./: .gitignore  CMakeLists.txt  README.md  VoxBlox_problems.md  nodelets.xml  package.xml
cfg/: DetectionParams.cfg
config/: detection_params.yaml  selflocalization_params.yaml  visualization.yaml
config/apriori_maps/: cisar.yaml  cisar_large.yaml  cisar_small.yaml  sim.yaml  temesvar_small.yaml  usmocku.yaml
config/sensors/: os0-128.yaml  os1-128.yaml
include/: main.h
include/vofod/: pc_loader.h  point_types.h  types.h  voxel_grid_counted.h  voxel_grid_weighted.h  voxel_map.h
launch/: create_mask.launch  detect.launch
msg/: ProfilingInfo.msg
msgs/: Detection.msg  DetectionStamped.msg  Status.msg
rviz/: uav1.rviz  uav32.rviz  uav91.rviz  uav92.rviz  uav93.rviz
src/: mask_creator.cpp  pc_loader.cpp  pcl_detect_nodelet.cpp  pcl_loader.cpp  vofod_nodelet.cpp  voxel_grid_counted.cpp  voxel_grid_weighted.cpp  voxel_map.cpp
tmux/simulation/: session.yml
tmux/simulation/config/: custom_config.yaml
tmux/simulation/config/trajectories/: params.yaml
tmux/simulation_sphere/: eval.py  eval_error.py  session.yml
tmux/simulation_sphere/config/: custom_config.yaml  pcl_filter.yaml
tmux/simulation_sphere/config/trajectories/: fast_line.txt  params.yaml
tmux/voxblox_rosbag/: .tmuxinator.yml  session.yml
tmux/voxblox_sim/: session.yml
