<?xml version="1.0"?>
<package format="2">
  <name>vofod</name>
  <version>1.0.0</version>
  <description>Package for detection of UAVs from camera image</description>

  <author email="vrbamato@fel.cvut.cz">Matouš Vrba</author>
  <maintainer email="vrbamato@fel.cvut.cz">Matouš Vrba</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>libopencv-dev</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>image_geometry</depend>
  <depend>message_generation</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>mrs_lib</depend>
  <depend>message_runtime</depend>
  <depend>nodelet</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>ouster_ros</depend>

  <depend>tf2_sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_msgs</depend>
  <depend>mrs_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />
    generate_messages_cpp
  </export>

</package>
